--- a/index.html
+++ b/index.html
@@ -21,35 +21,36 @@
 
   <section>
     <!-- Navbar Start -->
- <div class="container-fluid fixed-top px-0 wow fadeIn shadow-lg  data-wow-delay="0.1s style="top: 0px">
-   <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
-       <div class="col-lg-6 px-5 text-end">
-         
-           <small><i class="fa fa-envelope text-primary me-2"></i><a href="mailto:jigyashachauhan5@gmail.com">jigyashachauhan5@gmail.com</a></small>
-           <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i><a href="tel:+916398480640">+91 6398480640</a></small>
-       </div>
-   </div>
- 
-   <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
-       <a href="#" class="navbar-brand ms-4 ms-lg-0 animated slideInUp ">
-           <h1 class="display-5 text-primary m-0">CodeLine</h1>
-       </a>
-       <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
-           data-bs-target="#navbarCollapse">
-           <span class="navbar-toggler-icon"></span>
-       </button>
-       <div class="collapse navbar-collapse animated slideInDown" id="navbarCollapse">
-           <div class="navbar-nav ms-auto p-4 p-lg-0">
-               <a href="#" class="nav-item nav-link active">Home</a>
-               <a href="#about" class="nav-item nav-link">About</a>
-               <a href="#services" class="nav-item nav-link">Services</a>
-               <a href="#projects" class="nav-item nav-link">Projects</a>
-               <a href="#contact" class="nav-item nav-link">Contact</a>
-           </div>
-       </div>
-   </nav>
- </div>
- <!-- Navbar End -->
+    <div class="container-fluid fixed-top px-0 wow fadeIn shadow-lg  data-wow-delay=" 0.1s style="top: 0px">
+      <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
+        <div class="col-lg-6 px-5 text-end">
+
+          <small><i class="fa fa-envelope text-primary me-2"></i><a
+              href="mailto:jigyashachauhan5@gmail.com">jigyashachauhan5@gmail.com</a></small>
+          <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i><a href="tel:+916398480640">+91
+              6398480640</a></small>
+        </div>
+      </div>
+
+      <nav class="navbar navbar-expand-lg navbar-light py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
+        <a href="#" class="navbar-brand ms-4 ms-lg-0 animated slideInUp ">
+          <h1 class="display-5 text-primary m-0">CodeLine</h1>
+        </a>
+        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse animated slideInDown" id="navbarCollapse">
+          <div class="navbar-nav ms-auto p-4 p-lg-0">
+            <a href="#" class="nav-item nav-link active">Home</a>
+            <a href="#about" class="nav-item nav-link">About</a>
+            <a href="#services" class="nav-item nav-link">Services</a>
+            <a href="#projects" class="nav-item nav-link">Projects</a>
+            <a href="#contact" class="nav-item nav-link">Contact</a>
+          </div>
+        </div>
+      </nav>
+    </div>
+    <!-- Navbar End -->
   </section>
 
   <!-- Carousel Start -->
@@ -57,20 +58,34 @@
     <div id="header-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="img-fluid" src="images/bn page.png" alt="">
-        </div>
-        <div class="carousel-item">
-          <img class="img-fluid" src="images/Single Image.png" alt="">
+          <img class="img-fluid" src="images/bn design.png" alt="banner">
           <div class="carousel-caption">
             <div class="container">
               <div class="row justify-content-start">
-                <!-- <div class="col-lg-5">
+                <div class="col-lg-6">
+                  <h4 class="display-3 mb-0 animated slideInLeft text-primary">JIGYASHA CHAUHAN</h4>
+                  <p class="animated slideInLeft px-2"><small class="text-success" style="font-size: 24px;">Java
+                      Developer</small> </p>
+                  <a href="mailto:jigyashachauhan5@gmail.com"
+                    class="btn btn-warning py-2 px-5 animated slideInDown"><b>Mail</b></a>
+                </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="img-fluid" src="images/bn design.png" alt="">
+          <div class="carousel-caption">
+            <div class="container">
+              <div class="row justify-content-start">
+                <div class="col-lg-5">
                   <h4 class="display-4 mb-0 animated slideInDown text-primary">Turning Ideas into Code, and Code into
                     Solutions.</h4>
                   <hr>
                   <a href="tel:+916398480640" class="btn btn-danger py-2 px-5 animated slideInDown">
                     <b>Call</b></a>
-                </div> -->
+                </div>
 
               </div>
             </div>
@@ -104,9 +119,11 @@
 
             <h1 class="display-5 mb-4">Turning Code into Real-World Solutions</h1>
             <p class="mb-4" style="text-align: justify;">Hi, I'm Jigyasha — a passionate Java Developer with a solid
-              foundation in backend development using Java, Spring Boot, and MySQL.Alongside backend skills, I also have
+              foundation in backend development using Java, Spring Boot, and MySQL.Alongside backend skills, I also
+              have
               experience with HTML, CSS, and JavaScript, allowing me to build
-              responsive and interactive frontends as well. I specialize in building RESTful APIs, solving complex logic
+              responsive and interactive frontends as well. I specialize in building RESTful APIs, solving complex
+              logic
               problems, and delivering clean, maintainable
               code for web applications.Whether it’s building a backend system or designing a frontend layout, I focus
               on writing quality code and
@@ -144,8 +161,8 @@
         </div>
         <!-- Right: Image/Preview (optional) -->
         <div class="col-md-6 text-center">
-          <img src="images/library design.png" class="img-fluid rounded shadow"
-            style="max-width: 100%; height: auto;" alt="Car Price Project">
+          <img src="images/library design.png" class="img-fluid rounded shadow" style="max-width: 100%; height: auto;"
+            alt="Car Price Project">
         </div>
       </div>
 
@@ -268,7 +285,10 @@ using java Mysql and SpringBoot Framework
               <label for="email" class="form-label">Email Address</label>
               <input type="email" name="Email" class="form-control" id="email" required>
             </div>
-
+            <div class="mb-3">
+              <label for="message" class="form-label">Message</label>
+              <textarea class="form-control" id="message" name="message" rows="4" required></textarea>
+            </div>
             <div class="d-grid">
               <button type="submit" class="btn btn-primary">Submit</button>
             </div>
@@ -303,6 +323,10 @@ using java Mysql and SpringBoot Framework
   </footer>
   <!--Footer ends-->
 
+  <!--Javascript file-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
