--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="col-lg-6 px-5 text-end">
 
           <small><i class="fa fa-envelope text-primary me-2"></i><a
-              href="mailto:jigyashachauhan5@gmail.com">jigyashachauhan5@gmail.com</a></small>
+              href="mailto:jigyashachauhan5@gmail.com" target="_blank" rel="noopener noreferrer">jigyashachauhan5@gmail.com</a></small>
           <small class="ms-4"><i class="fa fa-phone-alt text-primary me-2"></i><a href="tel:+916398480640">+91
               6398480640</a></small>
         </div>
@@ -120,9 +120,9 @@
             <h1 class="display-5 mb-4">Turning Code into Real-World Solutions</h1>
             <p class="mb-4" style="text-align: justify;">Hi, I'm Jigyasha — a passionate Java Developer with a solid
               foundation in backend development using Java, Spring Boot, and MySQL.Alongside backend skills, I also
-              have
-              experience with HTML, CSS, and JavaScript, allowing me to build
-              responsive and interactive frontends as well. I specialize in building RESTful APIs, solving complex
+              have <strong>
+              1 year of hands-on experience </strong> with HTML, CSS, and JavaScript, allowing me to build
+              responsive user-friendly websites and web applications.. I specialize in building RESTful APIs, solving complex
               logic
               problems, and delivering clean, maintainable
               code for web applications.Whether it’s building a backend system or designing a frontend layout, I focus
@@ -268,7 +268,7 @@ using java Mysql and SpringBoot Framework
       <h2 class="text-center text-primary mb-4">Contact Me</h2>
       <div class="row justify-content-center">
         <div class="col-md-6">
-          <form action="https://formsubmit.co/jigyashachauhan555@gmail.com" method="POST">
+          <form action="https://formsubmit.co/jigyashachauhan5@gmail.com" method="POST" id="contactForm">
             <input type="hidden" name="_captcha" value="false">
 
             <div class="mb-3">
@@ -327,6 +327,14 @@ using java Mysql and SpringBoot Framework
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+    <script>
+  document.getElementById("contactForm").addEventListener("submit", function () {
+    alert("Your message has been sent successfully!");
+  });
+</script>
+
+    
 </body>
 
 </html>
